# ApiGateway/docs/swagger.json
@@ -194,7 +194,7 @@
             }
         },
         "/admin/user-list": {
-            "get": {
+            "post": {
                 "description": "admin gets users list",
                 "consumes": [
                     "application/json"
@@ -245,7 +245,7 @@
                 }
             }
         },
-        "/user/get-order:id": {
+        "/user/get-order/:id": {
             "get": {
                 "description": "get order by order_id",
                 "consumes": [
@@ -331,7 +331,7 @@
                 }
             }
         },
-        "/user/log/cancel:id": {
+        "/user/log/cancel/:id": {
             "delete": {
                 "description": "cancels user order",
                 "consumes": [
@@ -373,6 +373,46 @@
                             "type": "object",
                             "additionalProperties": true
                         }
+                    }
+                }
+            }
+        },
+        "/user/log/pay": {
+            "post": {
+                "description": "user pays his order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Payment",
+                "parameters": [
+                    {
+                        "description": "user id and order id",
+                        "name": "order_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/userproto.PayRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/orderproto.OK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -461,54 +501,6 @@
                     }
                 }
             }
-        },
-        "/user/pay": {
-            "post": {
-                "description": "user pays his order",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Payment",
-                "parameters": [
-                    {
-                        "description": "user id and order id",
-                        "name": "order_id",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userproto.PayRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/orderproto.OK"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -530,6 +522,9 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "type": "integer"
+                },
+                "meal_id": {
                     "type": "integer"
                 },
                 "order_id": {
@@ -608,6 +603,9 @@
                     "type": "integer"
                 },
                 "order_id": {
+                    "type": "integer"
+                },
+                "price": {
                     "type": "integer"
                 }
             }
